# GL3Test

./: .editorconfig  .gitignore  CMakeLists.txt
cmake/: FindGLM.cmake  FindSDL2.cmake
doc/: model_format.md
lib/: CMakeLists.txt
lib/gli/: CMakeLists.txt  copying.md
lib/glm/: CMakeLists.txt
lib/jansson/: CMakeLists.txt
lib/opengl/: CMakeLists.txt  extensions.txt  gen_cmd.txt
lib/opengl/debug/include/glad/: glad.h
lib/opengl/debug/src/: glad.c
lib/opengl/release/include/glad/: glad.h
lib/opengl/release/src/: glad.c
resources/: 2d_sprite.frag  2d_sprite.vert  bloom_pass.frag  brightpass.frag  direct_passthrough.vert  hdr_post_processing.frag  hdr_post_processing.vert  lighting_pass.frag  lighting_pass.vert  mesh_deferred.frag  mesh_deferred.vert  mesh_shadow.vert  model.frag  model.vert  nanovg.frag  nanovg.vert  point_sprite.frag  point_sprite.geom  point_sprite.vert
resources/export/: duck.fom  duck.json
shaders/: model.frag  model.vert
src/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp  source_groups.cmake
src/model/: AssimpModelConverter.cpp  AssimpModelConverter.hpp  Model.cpp  Model.hpp  ModelLoader.cpp  ModelLoader.hpp
src/renderer/: BufferObject.hpp  CommandBuffer.hpp  Debugging.hpp  DrawCall.hpp  DrawCallManager.hpp  Enums.hpp  Exceptions.hpp  LightingManager.hpp  PipelineState.hpp  Profiler.hpp  RenderTarget.hpp  RenderTargetManager.hpp  Renderer.hpp  ShaderParameters.hpp  ShaderProgram.hpp  Texture.hpp  Texture2D.hpp  Util.hpp  VertexLayout.hpp
src/renderer/opengl/: EnumTranslation.hpp  Enums.hpp  GL3BufferObject.cpp  GL3BufferObject.hpp  GL3CommandBuffer.cpp  GL3CommandBuffer.hpp  GL3Debugging.cpp  GL3Debugging.hpp  GL3DrawCall.cpp  GL3DrawCall.hpp  GL3DrawCallManager.cpp  GL3DrawCallManager.hpp  GL3LightingManager.cpp  GL3LightingManager.hpp  GL3Object.cpp  GL3Object.hpp  GL3PipelineState.cpp  GL3PipelineState.hpp  GL3Profiler.cpp  GL3Profiler.hpp  GL3PushConstantManager.cpp  GL3PushConstantManager.hpp  GL3RenderTarget.cpp  GL3RenderTarget.hpp  GL3RenderTargetManager.cpp  GL3RenderTargetManager.hpp  GL3Renderer.cpp  GL3Renderer.hpp  GL3ShaderDefintions.cpp  GL3ShaderDefintions.hpp  GL3ShaderManager.cpp  GL3ShaderManager.hpp  GL3ShaderParameters.cpp  GL3ShaderParameters.hpp  GL3ShaderProgram.cpp  GL3ShaderProgram.hpp  GL3State.cpp  GL3State.hpp  GL3StateFunctors.hpp  GL3Texture.cpp  (+7 more)
src/test/: Application.cpp  Application.hpp  AssimpModel.cpp  AssimpModel.hpp  DrawCall.cpp  DrawCall.hpp  DrawUtil.cpp  DrawUtil.hpp  Light.cpp  Light.hpp  LightingManager.cpp  LightingManager.hpp  NanoVGRenderer.cpp  NanoVGRenderer.hpp
src/util/: Assertion.hpp  DefaultFileLoader.cpp  DefaultFileLoader.hpp  EnumClassUtil.hpp  FileLoader.hpp  HashUtil.hpp  Timing.cpp  Timing.hpp  UniformAligner.hpp  UniqueHandle.hpp  VariableStackArray.hpp  VariableUniformBuffer.cpp  VariableUniformBuffer.hpp  textures.cpp  textures.hpp
